--- a/amazon/styles/_content.scss
+++ b/amazon/styles/_content.scss
@@ -26,3 +26,8 @@
                 padding-top: 0px;
             }
         }
+%center {
+                        display: flex;
+                        align-items: center;
+                        justify-content: center;         
+}
